[package]
name = "aoc21"
version = "0.1.0"
authors = ["Adrian <13946497+Ruixel@users.noreply.github.com>"]
edition = "2018"

[lib]
bench = false 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = '0.3.0'
aoc-runner-derive = '0.3.0'
itertools = '0.10.1'
